# wasmify

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
rust/: Cargo.toml
rust/src/: lib.rs
src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx
src/app/icon/: site.webmanifest
src/components/: theme-toggle.tsx
src/components/converter/: conversion-options.tsx  convertion-zone.tsx  file-dropzone.tsx  progress-indicator.tsx
src/lib/: media-converter.ts
src/types/: index.ts
src/wasm/: media_converter.d.ts  media_converter.js  media_converter_bg.wasm  media_converter_bg.wasm.d.ts  package.json
